[package]
name = "timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.2"
embedded-hal = "0.2.7"
max3010x = "0.1.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
shared-bus = { version = "0.2.5", features = ["cortex-m"] }
embedded-graphics = "0.7.1"
ssd1306 = "0.7.1"
heapless = "0.7.16"
embedded-plots = "0.2.0"
cortex-m-rtic = "1.1.3"
systick-monotonic = "1.0.1"

[dependencies.stm32f1]
version = "0.15.1"
features = ["stm32f103", "rt"]

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium"]
